[package]
name = "esp-hal-dshot"
authors = ["Michael DeGraw <michael.degraw@protonmail.com>"]
version = "0.4.0"
edition = "2021"
description = "Basic async no_std DSHOT implementation for esp-hal. Utilizes Remote Control Peripheral (RMT) to send DSHOT frames as pulses."
keywords = ["esp32", "DSHOT"]
repository = "https://github.com/mdegraw/esp-hal-dshot"
license = "Apache-2.0"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
esp-hal = { version = "1.0.0-beta.0", default-features = false, features = ["unstable"] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }

[features]
default = ["esp32"]
esp32 = ["esp-hal/esp32"]
esp32c2 = ["esp-hal/esp32c2"]
esp32c3 = ["esp-hal/esp32c3"]
esp32c6 = ["esp-hal/esp32c6"]
esp32h2 = ["esp-hal/esp32h2"]
esp32s2 = ["esp-hal/esp32s2"]
esp32s3 = ["esp-hal/esp32s3"]
